<resources>
    <string name="app_name">Miracle</string>

    <string name="default_alert">Default Alert</string>
    <string name="coloured_alert">Coloured Alert</string>
    <string name="text_only_alert">Text Only Alert</string>
    <string name="on_click_alert">On Click Alert</string>
    <string name="verbose_alert">Verbose Alert</string>
    <string name="custom_icon_alert">Custom Icon Alert</string>
    <string name="callback_alert">Alert Callbacks</string>
    <string name="infinite_alert">Infinity Duration Alert</string>







    <string name="lfrecyclerview_header_hint_normal">下拉刷新</string>
    <string name="lfrecyclerview_header_hint_ready">松开刷新数据</string>
    <string name="lfrecyclerview_header_hint_loading">正在加载...</string>
    <string name="lfrecyclerview_header_last_time">上次更新时间：</string>
    <string name="lfrecyclerview_footer_hint_normal">查看更多</string>
    <string name="lfrecyclerview_footer_hint_ready">松开载入更多</string>
    <string name="lfrecyclerview_header_hint_success">刷新成功</string>
    <string name="lfrecyclerview_header_hint_failt">刷新失败</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
</resources>
