<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnAlertDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_alert"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnAlertColoured"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coloured_alert"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnAlertCustomIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_icon_alert"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnAlertTextOnly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_only_alert"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnAlertOnClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/on_click_alert"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnAlertVerbose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verbose_alert"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnAlertCallback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/callback_alert"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnAlertInfiniteDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/infinite_alert"/>

</LinearLayout>